# versatileAnn

./: .gitattributes  .gitignore  Dockerfile  README.md  ann.py  annModule.py  churnTotResultsNoCv.csv  notes.md  pyproject.toml  quickSummary.md  requirements.txt  trainAnn.py  trainDeepAr.py  trainMultivariateTransformers.py  trainNbeats.py  trainNhits.py  trainTemporalFusionTransformers.py  trainTransformers.py  trainUnivariateTransformers.py
brazingTorchFolder/: brazingTorch.py  callbacks.py  lossModule.py  lossRegulator.py  modelDifferentiator.py  modelFitter.py  optimizer.py  preInitNPostInit_nModelReset.py  preInitNPostInit_nModelReset_inner.py  preRunTests.py  properties.py  readMe.md  regularization.py  saveLoad.py  specialModes.py  utils.py
commonDatasets/: getData.py
dataPrep/: dataCleaning.py  dataloader.py  dataset.py  datasetNDataloader.py  normalizers.py  normalizers_baseEncoders.py  normalizers_baseNormalizer.py  normalizers_mainGroupNormalizers.py  normalizers_multiColNormalizer.py  normalizers_normalizerStack.py  normalizers_singleColsNormalizer.py  preprocessing.py  utils.py  utils_innerFuncs.py  utils_innerFuncs2.py
devDocs/: feedbacks.md  projectTodos.md  versatileAnn_pycharmFormatter.editorconfig
examples/: trainAnn.py  trainDeepAr.py  trainMultivariateTransformers.py
helper codes/: helper binaryClassifierToVariationalAutoencoderModule.py  helper dropoutNetModule.py  helper variationalAutoencoderModule.py
marketDataCollector/: overview.md
metrics/: loss.py
models/: deepAr.py  multivariateTransformers.py  nbeats blocks.py  nbeats.py  (+7 more)
(+189 files in other folders)
