
[project]
name = "versatileAnn"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "FarhangAmaji", email = "popamaji@gmail.com"},
]
dependencies = [
    "numpy",
    "pandas",
    "pytorch-lightning",
    "pydantic",
    "colorama",
    "tensorboard",
    "scikit-learn",
    "coverage",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "None"}
distribution = true
[tool.pdm]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
